--- a/WEB/cadastro/style.css
+++ b/WEB/cadastro/style.css
@@ -34,14 +34,17 @@ body {
 .button-back{
     width: 160px;
     height: 50px;
-    border-color: #00000000;
+    border-color: #250fee00;
     border-radius: 20px;
     cursor: pointer;
-    margin-top: 900px;
+    margin-top: 450px;
+    position: absolute;
+    background-color: #0056b3;
+    font-size: 20px;
 }
 
 .button-back:hover{
-    background-color: #4f5a66;
+    background-color: #007bff;
     transition: background-color 0.6s;
 }
 
@@ -83,4 +86,27 @@ main {
         background-color: #0056b3;
         border-color: #f4f4f900;
     }
+}
+
+.text-info{
+    background-color: #00000000;
+    width: 35%;
+    height: 500px;
+    border-radius: 20%;
+    position: absolute;
+    top: 10%;
+    right: 65px;
+    color: #fff;
+    box-shadow: #0056b3;
+}
+
+.text-info h1{
+    font-size: 25px;
+    color: #0056b3;
+}
+
+.text-info p{
+    font-size: 25px;
+    padding: 15px;
+    margin-top: 1%;
 }
