--- a/WEB/cadastro/style.css
+++ b/WEB/cadastro/style.css
@@ -6,18 +6,22 @@ body {
     overflow: hidden;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f9;
+    background-color: #ffffff;
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .quadro-lateral{
+    background-image: url(https://th.bing.com/th/id/R.b5fb17342b38f4bae4e624ae6984ff9e?rik=NtUo1GZeYCpCDQ&pid=ImgRaw&r=0);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
     background-color: #000000bb;
     width: 35%;
     height: 1200px;
     position: absolute;
     color: #fff;
-    box-shadow: #0056b3;
+    box-shadow: 0 0 8px 4px #0056b3;
 }
 
 .quadro-lateral h1{
@@ -31,17 +35,21 @@ body {
     margin-top: 1%;
 }
 
-.button-back{
+.button-back {
     width: 160px;
     height: 50px;
-    border-color: #250fee00;
+    border: none; 
     border-radius: 20px;
     cursor: pointer;
-    margin-top: 450px;
-    position: absolute;
     background-color: #0056b3;
     font-size: 20px;
+    font-weight: bold;
+    color: white; 
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
 }
+
 
 .button-back:hover{
     background-color: #007bff;
@@ -49,7 +57,7 @@ body {
 }
 
 main {
-    width: 100%;
+    width: 130%;
     height: 80vh;
     display: flex;
     flex-direction: row;
@@ -59,38 +67,88 @@ main {
 }
 
 #input-cadastro {
+    background-color: rgba(255, 255, 255, 0);
+    margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    padding: 20px 30px;
+    border-radius: 10px;
+    text-align: center;
+  }
+  
+  form {
+    margin-top: 30px;
+    margin-bottom: 40px;
+  }
+  
+  label, input {
+    display: block;
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
+    text-align: left;
+  }
+  
+  label {
+    font-weight: bold;
+    font-size: .8rem;
+  }
+  
+  input {
+    border-top: #00000000;
+    border-left: #00000000;
+    border-right: #00000000;
+    border-bottom: 2px solid #000000;
+    padding: 10px;
+    font-size: 1rem;
+    margin-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0);
+  }
+  
+  input:focus {
+    border-bottom: 2px solid #08558B;
+  }
 
-#input-cadastro form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
+  textarea:focus, input:focus{
+    outline: none;
+  }
 
+  a {
+    font-size: .8rem;
+  }
+  
+  a:hover {
+    color: #09ff00;
+    transition: .3s;
+  }
 
-    & input,
-    button {
-        padding: 10px;
-        border-radius: 10px;
-        margin: 5px;
-    }
-
-    & button {
-        cursor: pointer;
+  input[type="submit"],
+  input[type="reset"] {
+    display: inline-block; 
+    width: 48%; 
+    text-align: center;
+    text-transform: uppercase;
+    border: 1px solid gray;
+    height: 40px;
+    border-radius: 20px;
+    cursor: pointer;
+    color: black;
+    background-color: transparent;
+    font-weight: bold;
+    transition: background-color 0.5s, color 0.5s;
+    margin: 0; 
+    padding: 0; 
+    vertical-align: middle; 
+  }
+      input[type="submit"]:hover,
+      input[type="reset"]:hover {
         background-color: #0056b3;
-        border-color: #f4f4f900;
-    }
-}
+        transition: .5s;
+      }
+
 
 .text-info{
     background-color: #00000000;
-    width: 35%;
+    width: 550px;
     height: 500px;
     border-radius: 20%;
     position: absolute;
@@ -101,12 +159,12 @@ main {
 }
 
 .text-info h1{
-    font-size: 25px;
+    font-size: 35px;
     color: #0056b3;
 }
 
 .text-info p{
-    font-size: 25px;
+    color: #2a91ff;
+    font-size: 20px;
     padding: 15px;
-    margin-top: 1%;
 }
