--- a/WEB/login/style.css
+++ b/WEB/login/style.css
@@ -1,55 +1,200 @@
-* {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-  }
-  body {
-    font-family: sans-serif;
-    background-color: rgb(49, 49, 49);
-    color: #fff;
-  }
-  h1 {
-    text-align: center;
-    margin: 20px 0;
-  }
-  form {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    width: 40vw;
-    margin: auto;
-  }
-  input {
-    font-size: 1.1rem;
-    padding: 10px;
-    border-radius: 3px;
-    border: 0;
-    outline: none;
-    margin-bottom: 20px;
-  }
-  .botoes {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .cadastro,
-  .limpa {
-    width: 15vw;
-    padding: 10px;
-    font-size: 1.1rem;
-    border: 0;
-    border-radius: 4px;
-    color: #fff;
-  }
-  .cadastro {
-    background-color: rgb(0, 143, 0);
-  }
-  .limpa {
-    background-color: rgb(95, 95, 95);
-  }
-  
-  a {
-    text-decoration: none;
-    color: #fff;
-    text-align: center;
-  }
+/* Estrutura inicial da pagina */
+body {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  background-color: #ffffff;
+  position: relative;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+/* Quadro na lateral esquerda da pagina com uma imagem */
+.quadro-lateral{
+  background-image: url(https://www.turkestrauss.com/wp-content/uploads/2022/09/AdobeStock_359409294-scaled-e1666327033212-600x765.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-color: #000000bb;
+  width: 35%;
+  height: 1200px;
+  position: absolute;
+  color: #fff;
+  box-shadow: 0 0 8px 4px #042344;
+}
+
+.quadro-lateral h1{
+  font-size: 25px;
+  color: #0056b3;
+}
+
+.quadro-lateral p{
+  font-size: 18px;
+  padding: 20px;
+  margin-top: 1%;
+}
+
+
+/* Botão no canto inferior esquerdo do quadro */
+.button-back {
+  width: 160px;
+  height: 50px;
+  border: none; 
+  border-radius: 20px;
+  cursor: pointer;
+  background-color: #0056b3;
+  font-size: 20px;
+  font-weight: bold;
+  color: white; 
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+}
+
+
+.button-back:hover{
+  background-color: #007bff;
+  transition: background-color 0.6s;
+}
+
+
+/* Form de cadastro do usuario */
+main {
+  width: 130%;
+  height: 80vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px
+}
+
+#input-cadastro {
+  background-color: rgba(255, 255, 255, 0);
+  margin-top: 2%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+  padding: 20px 30px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+form {
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+
+label, input {
+  display: block;
+  width: 100%;
+  text-align: left;
+}
+
+label {
+  font-weight: bold;
+  font-size: .8rem;
+}
+
+input {
+  border-top: #00000000;
+  border-left: #00000000;
+  border-right: #00000000;
+  border-bottom: 2px solid #000000;
+  padding: 10px;
+  font-size: 1rem;
+  margin-bottom: 20px;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+input:focus {
+  border-bottom: 2px solid #08558B;
+}
+
+textarea:focus, input:focus{
+  outline: none;
+}
+
+a {
+  font-size: 15px;
+  text-decoration: none;
+  color: #000000;
+}
+
+a:hover {
+  color: #0044ff;
+  transition: .3s;
+}
+
+input[type="submit"],
+input[type="reset"] {
+  display: inline-block; 
+  width: 48%; 
+  text-align: center;
+  text-transform: uppercase;
+  border: 1px solid gray;
+  height: 40px;
+  border-radius: 20px;
+  cursor: pointer;
+  color: black;
+  background-color: transparent;
+  font-weight: bold;
+  transition: background-color 0.5s, color 0.5s;
+  margin: 0; 
+  padding: 0; 
+  vertical-align: middle; 
+}
+    input[type="submit"]:hover,
+    input[type="reset"]:hover {
+      background-color: #0056b3;
+      transition: .5s;
+    }
+
+/* Texto de orientação colocado na parte superior central do quadro */
+.text-info{
+  background-color: #00000000;
+  width: 550px;
+  height: 500px;
+  border-radius: 20%;
+  position: absolute;
+  top: 10%;
+  right: 65px;
+  color: #fff;
+  box-shadow: #0056b3;
+}
+
+.text-info h1{
+  font-size: 35px;
+  color: #ffffff;
+}
+
+.text-info h2{
+  color:#8a0000;
+  font-size: 25px;
+}
+
+.text-info p{
+  color: #000000;
+  font-size: 20px;
+  padding: 15px;
+}
+
+.pag-title h1{
+background-color: #0057b300;
+color: rgb(0, 0, 0);
+padding: 10px 10px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+margin: 0;
+position: absolute;
+transform: translate(345%,20%);
+}
+
+.pag-title img{
+  width: 40px;
+}
