--- a/WEB/cadastro/style.css
+++ b/WEB/cadastro/style.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+/* Paleta de cores */
+:root{
+  --primary-color: #0056b3;
+  --primary-color-dark:#007bff;
+  --primary-color-light:#e9f7f7;
+  --secondary-color:#fb923c;
+  --secundary-color-dark: #c5671a;
+}
+
 /* Estrutura inicial da pagina */
 body {
     position: fixed;
@@ -9,7 +20,7 @@ body {
     padding: 0;
     background-color: #ffffff;
     position: relative;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins';
 }
 
 
@@ -29,7 +40,7 @@ body {
 
 .quadro-lateral h1{
     font-size: 25px;
-    color: #0056b3;
+    color: var(--primary-color);
 }
 
 .quadro-lateral p{
@@ -46,10 +57,10 @@ body {
     border: none; 
     border-radius: 20px;
     cursor: pointer;
-    background-color: #0056b3;
+    background-color: var(--secondary-color);
     font-size: 20px;
     font-weight: bold;
-    color: white; 
+    color: var(--primary-color-light); 
     position: fixed;
     bottom: 20px;
     left: 20px;
@@ -57,7 +68,7 @@ body {
 
 
 .button-back:hover{
-    background-color: #007bff;
+    background-color: var(--secundary-color-dark);
     transition: background-color 0.6s;
 }
 
@@ -148,7 +159,7 @@ main {
   }
       input[type="submit"]:hover,
       input[type="reset"]:hover {
-        background-color: #0056b3;
+        background-color: var(--secondary-color);
         transition: .5s;
       }
 
@@ -162,12 +173,12 @@ main {
     top: 10%;
     right: 65px;
     color: #fff;
-    box-shadow: #0056b3;
+    box-shadow: var(--primary-color);
 }
 
 .text-info h1{
     font-size: 35px;
-    color: #0056b3;
+    color: var(--primary-color);
 }
 
 .text-info p{
@@ -185,7 +196,7 @@ main {
   align-items: center;
   margin: 0;
   position: absolute;
-  transform: translate(345%,20%);
+  transform: translate(320%,20%);
 }
 
 .pag-title img{
