--- a/WEB/home/style.css
+++ b/WEB/home/style.css
@@ -1,242 +1,404 @@
-/* Estrutura inicial da pagina */
-body {
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+/* Paleta de cores */
+:root{
+    --primary-color: #0056b3;
+    --primary-color-dark:#007bff;
+    --primary-color-light:#e9f7f7;
+    --secondary-color:#fb923c;
+    --secundary-color-dark: #c5671a;
+    --text-dark:#333333;
+    --text-ligth:#767268;
+    --white:#ffffff;
+    --max-width:1200px;
+}
+
+*{
     padding: 0;
-    background-color: #f4f4f9;
-    position: relative;
-    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-/* Imagem de fundo colocado na primeira parte da pagina */
-.background-container {
-    background-image: url(https://th.bing.com/th/id/OIP.a7RzFeibYkze_WLtjHX85gHaEK?rs=1&pid=ImgDetMain);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    width: 100%;
-    height: 50vh;
-    position: relative;
-    box-shadow: 0 8px 16px rgba(10, 107, 218, 0.664); 
+.section_container{
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 5rem 1rem;
 }
 
-/* Imagem colocada no final da pagina */
-.background-container-down {
-    background-image: url(https://th.bing.com/th/id/OIP.mqDTB9Z3y82EnhA9SUvi-AHaEK?rs=1&pid=ImgDetMain);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    width: 100%;
-    height: 65vh;
-    margin-top: 220px;
-    position: relative;
-    box-shadow: 0 8px 16px rgba(10, 107, 218, 0.664); 
+.section_header{
+    margin-bottom: 0.5rem;
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--text-dark);
 }
 
-/* Texto de orientação colocado na imagem final da pagina */
-.text-box{
-    background-color: #000000bb;
-    width: 35%;
-    height: 500px;
-    border-radius: 20%;
-    position: absolute;
-    top: 10%;
-    right: 65px;
-    color: #fff;
-    box-shadow: #0056b3;
-}
-
-.text-box h1{
-    font-size: 25px;
-    color: #0056b3;
-}
-
-.text-box p{
-    font-size: 18px;
-    padding: 20px;
-    margin-top: 1%;
-}
-
-/* Botão redirecionando usuario ao cadastro colocado no texto da imagem final da pagina */
-.button-cad{
-    display: inline-block;
-    padding: 20px 35px;
-    background-color: #0056b3;
-    color: #fff;
-    text-decoration: none;
-    border-radius:10px;
+.btn{
+    padding: .75rem 2rem;
+    outline: none;
+    border: none;
+    font-size: 1rem;
+    white-space: nowrap;
+    color: var(--white);
+    background-color: var(--secondary-color);
+    border-radius: 5px;
     cursor: pointer;
-    border-color: rgba(178, 34, 34, 0);
-    font-size: 20px;
 }
 
-.button-cad:hover{
-    background-color: #007bff;
-    transition: background-color 0.6s;
+.btn:hover{
+    background-color: #c5671a;
+    transition: background-color 1.0s;
 }
 
-/* Cabeççalho da paagina com nome dos ite e rotas de cadastro e login */
-header {
-    background-color: #0056b3;
-    color: white;
-    padding: 20px 40px;
+img{
+    width: 100%;
     display: flex;
+}
+
+a{
+    text-decoration: none;
+}
+
+body{
+    font-family: "Poppins", sans-serif;    
+}
+
+header{
+    background-image: linear-gradient(
+        to right,
+        hsla(211, 100%, 35%, 0.412),
+        #007bff63
+    ),
+    url(../img/header.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.nav_container{
+    padding: 2rem 1rem;
+    display: flex;
+    align-items: center;
     justify-content: space-between;
+}
+
+.nav_logo{
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: var(--white);
+}
+
+.nav_logo span{
+    color: var(--secondary-color);
+}
+
+.nav_links{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.link a {
+    padding: 0.5rem;
+    color: var(--primary-color-light);
+}
+
+.link a:hover{
+    color: var(--white);
+}
+
+.header_container{
+    display: flex;
+    align-items: center;
+    gap: 5rem;
+}
+
+.header_container h1{
+    margin-bottom: 1rem;
+    max-width: 800px;
+    font-size: 3.5rem;
+    line-height: 4rem;
+    color: var(--white);
+}
+
+
+.header_container p{
+    margin-bottom: 2rem;
+    max-width: 600px;
+    color: var(--primary-color-light);
+}
+
+.header_form{
+    width: 100%;
+    max-width: 350px;
+}
+
+.header_form form{
+    display: grid;
+    gap: 1rem;
+    padding: 2rem;
+    background-color: var(--white);
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+}
+
+.header_form input{
+    padding: 1rem;
+    outline: none;
+    border: none;
+    font-size: 1rem;
+    color: var(--primary-color);
+    background-color: var(--primary-color-light);
+    border-radius: 5px;
+}
+
+.header_form input::placeholder{
+    color: var(--primary-color);
+}
+
+.form_btn{
+    background-color: var(--primary-color);
+    transition: .3s;
+}
+
+.form_btn:hover{
+    background-color: var(--primary-color-dark);
+}
+
+.header_form h4{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--primary-color);
+}
+
+.service_header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.service_header_content p{
+    max-width: 600px;
+    color: var(--text-ligth);
+}
+
+.service_btn{
+    padding: .75rem 1rem;
+    outline: none;
+    font-size: 1rem;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    background-color: transparent;
+    border-radius: 5px;
+    white-space: nowrap;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.service_btn:hover{
+    color: var(--white);
+    background-color: var(--primary-color);
+}
+
+.service_grid{
+    margin-top: 4rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.service_card{
+    padding: 2rem;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px rgb(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.service_card span{
+    display: inline-block;
+    margin-bottom: 1rem;
+    padding: 10px 20px;
+    font-size: 2.5rem;
+    color: var(--primary-color);
+    background-color: var(--primary-color-light);
+    border-radius: 100%;
+    transition: 0.3s;
+}
+
+.service_card h4{
+    margin-bottom: 0.5rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--text-dark);
+}
+
+.service_card p{
+    margin-bottom: 1rem;
+    color: var(--text-ligth);
+}
+
+.service_card a{
+    color: var(--primary-color);
+}
+
+.service_card a:hover{
+    color: var(--primary-color-dark);
+}
+
+.service_card:hover span{
+    color: var(--primary-color-light);
+    background-color: var(--primary-color);
+}
+
+.about_container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
     align-items: center;
 }
 
-header h1 {
-    margin: 0;
+.about_content p{
+    margin-bottom: 1rem;
+    color: var(--text-ligth);
 }
 
-header img{
-    width: 40px;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-}
-
-nav ul li {
-    margin-left: 20px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-nav ul li a:hover {
-    color: #61bde7;
-    transition: color 0.6s;
-}
-
-section {
-    padding: 20px;
-    margin: 0 10px;
-}
-
-.book-card {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    margin-bottom: 20px;
-    display: inline-block;
-    width: 200px;
-    vertical-align: top;
-    background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 4px 8px #00000033;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.book-card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-}
-
-.book-card img {
-    width: 100%;
-    border-radius: 8px;
-}
-
-/* Container contando com um acesso direto ao campo de Diagnostico */
-.card-container {
-    position: absolute;
-    top: 25vh;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 50px;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 80%;
-}
-
-.card {
-    background: rgba(255, 255, 255, 0.85);
-    border-radius: 50px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    width: 400px;
-    text-align: center;
-    padding: 20px;
-    z-index: 10;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
-}
-
-.card img {
-    width: 100%;
+.about_imagem img{
+    max-width: 400px;
+    margin: auto;
     border-radius: 10px;
 }
 
-.card-content {
-    padding: 15px;
-}
-
-.card-title {
-    font-size: 1.5em;
-    color: #333;
-}
-
-.card-description {
-    font-size: 1em;
-    color: #666;
-    margin: 10px 0;
-}
-
-.card-button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-.card-button:hover {
-    background-color: #0056b3;
-}
-
-/* Tres informações no meio da pagina (três bolas contendo informação e descrição) */
-.icon-section {
-    text-align: center;
-    margin-top: 250px;
-}
-
-.icon-container {
+.cuidados_header{
     display: flex;
-    justify-content: center;
-    gap: 65px;
-}
-
-.icon-ball {
-    background-color: #0056b3; 
-    width: 250px;
-    height: 250px;
-    border-radius: 60%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    color: white;
-    font-size: 40px;
-    text-align: center;
-    padding: 10px;
+    justify-content: space-between;
+    gap: 2rem;
 }
 
-.icon-ball p {
-    margin-top: 0px;
-    font-size: 14px;
+.cuidados_header_content p{
+    max-width: 600px;
+    color: var(--text-ligth);
 }
 
-.icon-ball h1 {
-    margin-top: 5px;
-    font-size: 20px;
+.cuidados{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
+
+.cuidados span{
+    padding: 5px 15px;
+    font-size: 1.5rem;
+    color: var(--primary-color);
+    background-color: var(--primary-color-light);
+    cursor: pointer;
+}
+
+.cuidados_socials{
+    position: absolute;
+    left: 0;
+    bottom: -4rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    transition: 0.5s;
+}
+
+.cuidados_socials span{
+    display: inline-block;
+    padding: 6px 12px;
+    font-size: 1.5rem;
+    color: var(--text-dark);
+    background-color: var(--white);
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.cuidados_socials span:hover{
+    color: var(--primary-color);
+}
+
+.cuidados_card:hover .cuidados_socials{
+    bottom: 2rem;
+}
+
+
+.footer{
+    background-color: var(--primary-color-light);
+}
+
+.footer_container{
+    display: grid;
+    grid-template-columns: 400px repeat(3, 1fr);
+    gap: 2;
+}
+
+.footer_col h3{
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+
+.footer_col h3 span{
+    color: var(--secondary-color);
+}
+
+.footer_col h4{
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+
+.footer_col p{
+    margin-bottom: 1rem;
+    columns: var(--text-dark);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.footer_col p:hover{
+    color: var(--primary-color);
+}
+
+.footer_col i{
+    color: var(--primary-color);
+}
+
+.footer_bar{
+    background-color: var(--primary-color);
+}
+
+.footer_bar_content{
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 0.5rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.footer_bar_content p{
+    font-size: 0.8rem;
+    color: var(--white);
+}
+
+.footer_socials{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1rem;
+    color: var(--white);
+    cursor: pointer;
+}
+
+
+
