--- a/WEB/home/style.css
+++ b/WEB/home/style.css
@@ -68,7 +68,7 @@ header{
         hsla(211, 100%, 35%, 0.412),
         #007bff63
     ),
-    url(../img/header.jpg);
+    url(../img/headerIMG.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
