--- a/WEB/login/style.css
+++ b/WEB/login/style.css
@@ -1,12 +1,3 @@
-/**
- * * General variables
- * */
-/**
- * * General configs
- * */
- * {
-  box-sizing: border-box;
-}
 
 body {
   font-family: "Montserrat", sans-serif;
@@ -328,3 +319,50 @@ input::placeholder {
     padding: 50px 45px;
   }
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+
+:root{
+    --secondary-color:#fb923c;
+    --white:#ffffff;
+    --max-width:1300px;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+header{
+    background-image: linear-gradient(
+        to right,
+        hsla(211, 100%, 35%, 0.412),
+        #007bff63
+    ),
+    url(../img/header.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.nav_container{
+    padding: 9rem 9rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav_logo{
+    font-size: 3.5rem;
+    font-weight: 600;
+    color: var(--white);
+}
+
+.nav_logo span{
+    color: var(--secondary-color);
+}
+
+
+
